--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_modules">Modules</string>
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
+
+    <string name="sp_active_module_id">Settings</string>
 </resources>
