--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">BarCodeReader</string>
+    <string name="app_name">BarCode Reader</string>
     <string name="title_scan">Scan</string>
     <string name="title_modules">Modules</string>
     <string name="title_history">History</string>
     <string name="title_settings">Settings</string>
+    <string name="title_maps">Map</string>
 
+    <string name="sp_name">sp_default</string>
     <string name="sp_active_module_id">activeModule</string>
     <string name="sp_history_current_module">historyCurrentModule</string>
 
@@ -13,5 +15,10 @@
 
     <string name="history_switch">current module</string>
 
-    <string name="title_activity_maps">Map</string>
+    <string name="biometric_title">Login</string>
+    <string name="biometric_subtitle">Login to Barcode Reader</string>
+    <string name="biometric_description">Place your finger on the fingerprint sensor</string>
+    <string name="biometric_negative_button_text">Cancel</string>
+    <string name="biometric_failed">Fingerprint not recognized</string>
+    <string name="sp_fingerprint_enable">fingerprint_enable</string>
 </resources>
