--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="biometric_negative_button_text">Cancel</string>
     <string name="biometric_failed">Fingerprint not recognized</string>
     <string name="sp_fingerprint_enable">fingerprint_enable</string>
+    <string name="sp_is_auth">spIsAuthenticated</string>
 </resources>
